RM17913: added new field in StockMove, SaleOrder and POrder

--- a/axelor-stock/src/main/resources/i18n/messages.csv
+++ b/axelor-stock/src/main/resources/i18n/messages.csv
@@ -78,6 +78,7 @@
 "Code",,,
 "Collected",,,
 "Collection date",,,
+"Comment",,,
 "Commercial regularization resulting in value increase",,,
 "Commercial regularization resulting in value reduction",,,
 "Company",,,
