--- a/axelor-stock/src/main/resources/i18n/messages_de.csv
+++ b/axelor-stock/src/main/resources/i18n/messages_de.csv
@@ -16,6 +16,7 @@
 "A cancel reason must be selected","Ein Stornierungsgrund muss ausgewählt werden.",,
 "A partial stock move has been generated (%s)","Es wurde eine Teilbestandsbewegung erzeugt (%s).",,
 "Account selection to carrier","Auswahl des Kontos für den Spediteur",,
+"Accounting value",,,
 "Add","Hinzufügen",,
 "Address","Adresse",,
 "Alert","Warnung",,
@@ -77,6 +78,7 @@
 "Code","Code",,
 "Collected","Gesammelt",,
 "Collection date","Abholdatum",,
+"Comment",,,
 "Commercial regularization resulting in value increase","Kommerzielle Regularisierung mit Wertsteigerung",,
 "Commercial regularization resulting in value reduction","Kommerzielle Regularisierung mit daraus resultierender Wertminderung",,
 "Company","Unternehmen",,
@@ -98,15 +100,17 @@
 "ConformityCertificate.customerName","Kundenname",,
 "ConformityCertificate.designation","Bezeichnung",,
 "ConformityCertificate.function","Funktion",,
+"ConformityCertificate.lotNoRef",,,
 "ConformityCertificate.name","Name",,
 "ConformityCertificate.numberAndDateDelivery","Nr. & Liefertermin",,
 "ConformityCertificate.orderDate","Datum der Bestellung",,
 "ConformityCertificate.orderNumber","Bestellnummer",,
 "ConformityCertificate.partNumber","Teilenummer",,
-"ConformityCertificate.qty","Menge",,
+"ConformityCertificate.qtyUnit",,,
 "ConformityCertificate.quantity","Menge",,
 "ConformityCertificate.sequence","Sequenz",,
 "ConformityCertificate.signature","Unterschrift",,
+"ConformityCertificate.stockMoveLineRowNum",,,
 "Consignments by post","Sendungen per Post",,
 "Control on Receipt","Kontrolle des Eingangs",,
 "Counter","Zähler",,
@@ -168,12 +172,14 @@
 "Dimensions (cm)","Abmessungen (cm)",,
 "Display accounting value in location financial data printing",,,
 "Display available tracking numbers","Verfügbare Tracking-Nummern anzeigen",,
+"Display average price in printing",,,
 "Display barcode on Picking printing","Barcode beim Kommissionierdruck anzeigen",,
 "Display customer code on picking printing",,,
 "Display line details on printing","Zeigt Zeilendetails beim Drucken an.",,
 "Display partner sequence on printing","Partnerreihenfolge beim Drucken anzeigen",,
 "Display sale value in location financial data printing",,,
 "Display tracking number details on Picking printing","Zeigt Details zur Trackingnummer beim Kommissionierdruck an.",,
+"Display tracking number details on certificate of conformity printing",,,
 "Do you want to generate backorder for not delivered quantities?",,,
 "Do you want to generate backorder for not received quantities?",,,
 "Draft","Entwurf",,
@@ -532,6 +538,7 @@
 "Sale Qty by tracking","Verkaufsmenge durch Verfolgung",,
 "Sale order","Verkaufsauftrag",,
 "Sale tracking management","Verkaufsverfolgung Management",,
+"Sale value",,,
 "Search","Suche",,
 "Select format to Export","Format für den Export auswählen",,
 "Seller","Verkäufer",,
@@ -589,6 +596,7 @@
 "Stock location details","Angaben zum Lagerort",,
 "Stock location lines","Lagerortungszeilen",,
 "Stock location value","Lagerort Wert",,
+"Stock location value on form view",,,
 "Stock location(s)","Lagerort(e)",,
 "Stock managed","Verwaltete Bestände",,
 "Stock management","Lagerverwaltung",,
@@ -748,6 +756,7 @@
 "View Direction","Ansichtsrichtung",,
 "Virtual","Virtuell",,
 "Virtual stock locations informations","Virtuelle Lagerstandorte Informationen",,
+"WAP value",,,
 "Warranty expiration date","Ablaufdatum der Garantiezeit",,
 "Wording","Wortlaut",,
 "Workshop","Workshop",,
