--- a/axelor-stock/src/main/resources/i18n/messages_es.csv
+++ b/axelor-stock/src/main/resources/i18n/messages_es.csv
@@ -16,6 +16,7 @@
 "A cancel reason must be selected","Debe seleccionarse un motivo de cancelación",,
 "A partial stock move has been generated (%s)","Se ha generado un movimiento de stock parcial (%s)",,
 "Account selection to carrier","Selección de cuenta para el transportista",,
+"Accounting value",,,
 "Add","Añadir",,
 "Address","Dirección",,
 "Alert","Alerta",,
@@ -77,6 +78,7 @@
 "Code","Código",,
 "Collected","Recolectados",,
 "Collection date","Fecha de recogida",,
+"Comment",,,
 "Commercial regularization resulting in value increase","Regularización comercial con aumento de valor",,
 "Commercial regularization resulting in value reduction","Regularización comercial que resulta en una reducción de valor",,
 "Company","Empresa",,
@@ -98,15 +100,17 @@
 "ConformityCertificate.customerName","Nombre del cliente",,
 "ConformityCertificate.designation","Designación",,
 "ConformityCertificate.function","Función",,
+"ConformityCertificate.lotNoRef",,,
 "ConformityCertificate.name","Nombre",,
 "ConformityCertificate.numberAndDateDelivery","N° y fecha de entrega",,
 "ConformityCertificate.orderDate","Fecha del pedido",,
 "ConformityCertificate.orderNumber","Número de pedido",,
 "ConformityCertificate.partNumber","Número de pieza",,
-"ConformityCertificate.qty","Cantidad",,
+"ConformityCertificate.qtyUnit",,,
 "ConformityCertificate.quantity","Cantidad",,
 "ConformityCertificate.sequence","Secuencia",,
 "ConformityCertificate.signature","Firma",,
+"ConformityCertificate.stockMoveLineRowNum",,,
 "Consignments by post","Envíos por correo",,
 "Control on Receipt","Control en el recibo",,
 "Counter","Contador",,
@@ -168,12 +172,14 @@
 "Dimensions (cm)","Dimensiones (cm)",,
 "Display accounting value in location financial data printing",,,
 "Display available tracking numbers","Visualizar números de seguimiento disponibles",,
+"Display average price in printing",,,
 "Display barcode on Picking printing","Visualizar el código de barras en la impresión de picking",,
 "Display customer code on picking printing",,,
 "Display line details on printing","Visualizar detalles de línea en la impresión",,
 "Display partner sequence on printing","Visualizar la secuencia de interlocutor en la impresión",,
 "Display sale value in location financial data printing",,,
 "Display tracking number details on Picking printing","Visualizar la info detallada del número de seguimiento en la impresión de picking",,
+"Display tracking number details on certificate of conformity printing",,,
 "Do you want to generate backorder for not delivered quantities?",,,
 "Do you want to generate backorder for not received quantities?",,,
 "Draft","Proyecto de",,
@@ -532,6 +538,7 @@
 "Sale Qty by tracking","Cantidad de venta por seguimiento",,
 "Sale order","Pedido de venta",,
 "Sale tracking management","Gestión de seguimiento de ventas",,
+"Sale value",,,
 "Search","Buscar",,
 "Select format to Export","Seleccione el formato para exportar",,
 "Seller","Vendedor",,
@@ -589,6 +596,7 @@
 "Stock location details","Detalles de la ubicación de stock",,
 "Stock location lines","Líneas de ubicación de stock",,
 "Stock location value","Valor de almacén",,
+"Stock location value on form view",,,
 "Stock location(s)","Ubicación(es) de stock",,
 "Stock managed","Stock gestionado",,
 "Stock management","Gestión de existencias",,
@@ -748,6 +756,7 @@
 "View Direction","Dirección de la vista",,
 "Virtual","Virtual",,
 "Virtual stock locations informations","Información sobre las ubicaciones virtuales de las existencias",,
+"WAP value",,,
 "Warranty expiration date","Fecha de vencimiento de la garantía",,
 "Wording","Texto",,
 "Workshop","Taller",,
