--- a/axelor-stock/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-stock/src/main/resources/i18n/messages_fr.csv
@@ -78,6 +78,7 @@
 "Code",,,
 "Collected","Enlevé",,
 "Collection date","Date d’enlèvement",,
+"Comment","Commentaire",,
 "Commercial regularization resulting in value increase","Régularisation commerciale entraînant une majoration de valeur",,
 "Commercial regularization resulting in value reduction","Régularisation commerciale entraînant une minoration de valeur",,
 "Company","Société",,
