--- a/axelor-stock/src/main/resources/i18n/messages_it.csv
+++ b/axelor-stock/src/main/resources/i18n/messages_it.csv
@@ -16,6 +16,7 @@
 "A cancel reason must be selected","Deve essere selezionato un motivo di annullamento",,
 "A partial stock move has been generated (%s)","È stato generato uno spostamento parziale delle scorte (%s)",,
 "Account selection to carrier","Selezione del conto al vettore",,
+"Accounting value",,,
 "Add","Aggiungi",,
 "Address","Indirizzo",,
 "Alert","Allarme",,
@@ -77,6 +78,7 @@
 "Code","Codice",,
 "Collected","Raccolta",,
 "Collection date","Data di ritiro",,
+"Comment",,,
 "Commercial regularization resulting in value increase","La regolarizzazione commerciale con conseguente aumento di valore",,
 "Commercial regularization resulting in value reduction","Regolarizzazione commerciale con conseguente riduzione di valore",,
 "Company","L'azienda",,
@@ -98,15 +100,17 @@
 "ConformityCertificate.customerName","Nome del cliente",,
 "ConformityCertificate.designation","Designazione",,
 "ConformityCertificate.function","Funzione",,
+"ConformityCertificate.lotNoRef",,,
 "ConformityCertificate.name","Nome",,
 "ConformityCertificate.numberAndDateDelivery","N° e data di consegna",,
 "ConformityCertificate.orderDate","Data dell'ordine",,
 "ConformityCertificate.orderNumber","Numero d'ordine",,
 "ConformityCertificate.partNumber","Numero di parte",,
-"ConformityCertificate.qty","Quantità",,
+"ConformityCertificate.qtyUnit",,,
 "ConformityCertificate.quantity","Quantità",,
 "ConformityCertificate.sequence","Sequenza",,
 "ConformityCertificate.signature","Firma",,
+"ConformityCertificate.stockMoveLineRowNum",,,
 "Consignments by post","Spedizioni per posta",,
 "Control on Receipt","Controllo alla ricezione",,
 "Counter","Contatore",,
@@ -168,12 +172,14 @@
 "Dimensions (cm)","Dimensioni (cm)",,
 "Display accounting value in location financial data printing",,,
 "Display available tracking numbers","Visualizzare i numeri di tracciamento disponibili",,
+"Display average price in printing",,,
 "Display barcode on Picking printing","Visualizzazione del codice a barre sulla stampa di picking",,
 "Display customer code on picking printing",,,
 "Display line details on printing","Visualizza i dettagli della linea sulla stampa",,
 "Display partner sequence on printing","Visualizzazione della sequenza di partner durante la stampa",,
 "Display sale value in location financial data printing",,,
 "Display tracking number details on Picking printing","Visualizzare i dettagli del numero di tracciamento sulla stampa di picking",,
+"Display tracking number details on certificate of conformity printing",,,
 "Do you want to generate backorder for not delivered quantities?","Voulez-vous gérer les reliquats pour les quantités non livrées ?",,
 "Do you want to generate backorder for not received quantities?","Voulez-vous gérer les reliquats pour les quantités non reçues ?",,
 "Draft","Bozza",,
@@ -532,6 +538,7 @@
 "Sale Qty by tracking","Qtà di vendita rintracciando",,
 "Sale order","Ordine di vendita",,
 "Sale tracking management","Gestione del monitoraggio delle vendite",,
+"Sale value",,,
 "Search","Ricerca",,
 "Select format to Export","Selezionare il formato da esportare",,
 "Seller","Venditore",,
@@ -589,6 +596,7 @@
 "Stock location details","Dettagli sulla localizzazione dello stock",,
 "Stock location lines","Linee di localizzazione delle scorte",,
 "Stock location value","Valore di localizzazione delle scorte",,
+"Stock location value on form view",,,
 "Stock location(s)","Luogo(i) di stoccaggio",,
 "Stock managed","Azioni gestite",,
 "Stock management","Gestione delle scorte",,
@@ -748,6 +756,7 @@
 "View Direction","Direzione della vista",,
 "Virtual","Virtuale",,
 "Virtual stock locations informations","Informazioni sulle giacenze di magazzino virtuali",,
+"WAP value",,,
 "Warranty expiration date","Data di scadenza della garanzia",,
 "Wording","Formulazione",,
 "Workshop","Officina",,
