--- a/axelor-stock/src/main/resources/i18n/messages_nl.csv
+++ b/axelor-stock/src/main/resources/i18n/messages_nl.csv
@@ -16,6 +16,7 @@
 "A cancel reason must be selected","Er moet een annuleringsreden worden gekozen",,
 "A partial stock move has been generated (%s)","Er is een gedeeltelijke voorraadmutatie gegenereerd (%s)",,
 "Account selection to carrier","Account selectie naar drager",,
+"Accounting value",,,
 "Add","Toevoegen",,
 "Address","Adres",,
 "Alert","Alarm",,
@@ -77,6 +78,7 @@
 "Code","Code",,
 "Collected","Verzameld",,
 "Collection date","Datum van afhaling",,
+"Comment",,,
 "Commercial regularization resulting in value increase","Commerciële regularisatie resulterend in waardestijging",,
 "Commercial regularization resulting in value reduction","Commerciële regularisatie met als resultaat waardeverlies",,
 "Company","Bedrijf",,
@@ -98,15 +100,17 @@
 "ConformityCertificate.customerName","Naam van de klant",,
 "ConformityCertificate.designation","Aanwijzing",,
 "ConformityCertificate.function","Functie",,
+"ConformityCertificate.lotNoRef",,,
 "ConformityCertificate.name","Naam",,
 "ConformityCertificate.numberAndDateDelivery","Nr. & datum levering",,
 "ConformityCertificate.orderDate","Datum van bestelling",,
 "ConformityCertificate.orderNumber","Bestelnummer",,
 "ConformityCertificate.partNumber","Onderdeelnummer",,
-"ConformityCertificate.qty","Hoeveelheid",,
+"ConformityCertificate.qtyUnit",,,
 "ConformityCertificate.quantity","Hoeveelheid",,
 "ConformityCertificate.sequence","Volgorde",,
 "ConformityCertificate.signature","Handtekening",,
+"ConformityCertificate.stockMoveLineRowNum",,,
 "Consignments by post","Zendingen per post",,
 "Control on Receipt","Controle op ontvangstbewijs",,
 "Counter","Teller",,
@@ -168,12 +172,14 @@
 "Dimensions (cm)","Afmetingen (cm)",,
 "Display accounting value in location financial data printing",,,
 "Display available tracking numbers","Beschikbare trackingnummers weergeven",,
+"Display average price in printing",,,
 "Display barcode on Picking printing","Toon barcode op Picking afdrukken",,
 "Display customer code on picking printing",,,
 "Display line details on printing","De details van de vertoningslijn op druk",,
 "Display partner sequence on printing","Toon partnersequentie bij het afdrukken",,
 "Display sale value in location financial data printing",,,
 "Display tracking number details on Picking printing","Geef de details van het trackingnummer weer bij het afdrukken van Picking",,
+"Display tracking number details on certificate of conformity printing",,,
 "Do you want to generate backorder for not delivered quantities?","Voulez-vous gérer les reliquats pour les quantités non livrées ?",,
 "Do you want to generate backorder for not received quantities?","Voulez-vous gérer les reliquats pour les quantités non reçues ?",,
 "Draft","Ontwerp",,
@@ -532,6 +538,7 @@
 "Sale Qty by tracking","Verkoop Qty door het volgen van",,
 "Sale order","Verkooporder",,
 "Sale tracking management","Beheer van verkooptracking",,
+"Sale value",,,
 "Search","Zoeken",,
 "Select format to Export","Selecteer formaat om te exporteren",,
 "Seller","Verkoper",,
@@ -589,6 +596,7 @@
 "Stock location details","Voorraad locatiegegevens",,
 "Stock location lines","Voorraadlocatielijnen",,
 "Stock location value","Waarde van de voorraadlocatie",,
+"Stock location value on form view",,,
 "Stock location(s)","Voorraadlocatie(s)",,
 "Stock managed","Beheerde voorraad",,
 "Stock management","Voorraadbeheer",,
@@ -748,6 +756,7 @@
 "View Direction","Bekijk Richting",,
 "Virtual","Virtueel",,
 "Virtual stock locations informations","Informatie over virtuele voorraadlocaties",,
+"WAP value",,,
 "Warranty expiration date","Vervaldatum garantie",,
 "Wording","Omschrijving",,
 "Workshop","Werkplaats",,
