--- a/axelor-stock/src/main/resources/i18n/messages_pl.csv
+++ b/axelor-stock/src/main/resources/i18n/messages_pl.csv
@@ -16,6 +16,7 @@
 "A cancel reason must be selected","Należy wybrać przyczynę anulowania",,
 "A partial stock move has been generated (%s)","Częściowe przesunięcie zapasów zostało wygenerowane (%s)",,
 "Account selection to carrier","Wybór konta przewoźnika",,
+"Accounting value",,,
 "Add","Dodaj",,
 "Address","Adres",,
 "Alert","Alert",,
@@ -77,6 +78,7 @@
 "Code","Kod",,
 "Collected","Zebrano",,
 "Collection date","Data odbioru",,
+"Comment",,,
 "Commercial regularization resulting in value increase","Regularyzacja handlowa skutkująca wzrostem wartości",,
 "Commercial regularization resulting in value reduction","Regularyzacja handlowa prowadząca do obniżenia wartości",,
 "Company","Firma",,
@@ -98,15 +100,17 @@
 "ConformityCertificate.customerName","Nazwa klienta",,
 "ConformityCertificate.designation","Oznaczenie",,
 "ConformityCertificate.function","Funkcja",,
+"ConformityCertificate.lotNoRef",,,
 "ConformityCertificate.name","Nazwa",,
 "ConformityCertificate.numberAndDateDelivery","Nr i data dostawy",,
 "ConformityCertificate.orderDate","Data zamówienia",,
 "ConformityCertificate.orderNumber","Numer zamówienia",,
 "ConformityCertificate.partNumber","Numer części",,
-"ConformityCertificate.qty","Ilość",,
+"ConformityCertificate.qtyUnit",,,
 "ConformityCertificate.quantity","Ilość",,
 "ConformityCertificate.sequence","Kolejność",,
 "ConformityCertificate.signature","Podpisanie",,
+"ConformityCertificate.stockMoveLineRowNum",,,
 "Consignments by post","Przesyłki pocztą",,
 "Control on Receipt","Kontrola na pokwitowaniu",,
 "Counter","Licznik",,
@@ -168,12 +172,14 @@
 "Dimensions (cm)","Wymiary (cm)",,
 "Display accounting value in location financial data printing",,,
 "Display available tracking numbers","Wyświetlanie dostępnych numerów monitorowania",,
+"Display average price in printing",,,
 "Display barcode on Picking printing","Wyświetlanie kodu kreskowego na drukarce Picking",,
 "Display customer code on picking printing",,,
 "Display line details on printing","Wyświetlanie szczegółów linii na wydruku",,
 "Display partner sequence on printing","Wyświetlanie sekwencji partnerów podczas drukowania",,
 "Display sale value in location financial data printing",,,
 "Display tracking number details on Picking printing","Wyświetlanie szczegółów dotyczących numeru śledzenia na wydruku Picking",,
+"Display tracking number details on certificate of conformity printing",,,
 "Do you want to generate backorder for not delivered quantities?",,,
 "Do you want to generate backorder for not received quantities?",,,
 "Draft","Wstępny projekt",,
@@ -532,6 +538,7 @@
 "Sale Qty by tracking","Sprzedaż Qty przez śledzenie",,
 "Sale order","Zamówienie sprzedaży",,
 "Sale tracking management","Zarządzanie śledzeniem sprzedaży",,
+"Sale value",,,
 "Search","Wyszukiwanie",,
 "Select format to Export","Wybierz format do eksportu",,
 "Seller","Sprzedający",,
@@ -589,6 +596,7 @@
 "Stock location details","Szczegóły dotyczące lokalizacji zapasów",,
 "Stock location lines","Linie lokalizacji zapasów",,
 "Stock location value","Wartość lokalizacji zapasów",,
+"Stock location value on form view",,,
 "Stock location(s)","Lokalizacja(-e) zapasów",,
 "Stock managed","Zarządzanie zapasami",,
 "Stock management","Zarządzanie stadem",,
@@ -748,6 +756,7 @@
 "View Direction","Kierunek widzenia",,
 "Virtual","Wirtualne",,
 "Virtual stock locations informations","Informacje o wirtualnych lokalizacjach magazynowych",,
+"WAP value",,,
 "Warranty expiration date","Data wygaśnięcia gwarancji",,
 "Wording","Słownictwo",,
 "Workshop","Warsztaty",,
