--- a/axelor-stock/src/main/resources/i18n/messages_pt.csv
+++ b/axelor-stock/src/main/resources/i18n/messages_pt.csv
@@ -16,6 +16,7 @@
 "A cancel reason must be selected","Um motivo de cancelamento deve ser selecionado",,
 "A partial stock move has been generated (%s)","Um movimento de estoque parcial foi gerado (%s)",,
 "Account selection to carrier","Seleção de conta para operadora",,
+"Accounting value",,,
 "Add","Adicionar",,
 "Address","Morada",,
 "Alert","Alerta",,
@@ -77,6 +78,7 @@
 "Code","Código",,
 "Collected","Recolhido",,
 "Collection date","Data de cobrança",,
+"Comment",,,
 "Commercial regularization resulting in value increase","Regularização comercial resultando em aumento de valor",,
 "Commercial regularization resulting in value reduction","Regularização comercial resultando em redução de valor",,
 "Company","Empresa",,
@@ -98,15 +100,17 @@
 "ConformityCertificate.customerName","Nome do Cliente",,
 "ConformityCertificate.designation","Designação",,
 "ConformityCertificate.function","Função",,
+"ConformityCertificate.lotNoRef",,,
 "ConformityCertificate.name","Nome e Sobrenome",,
 "ConformityCertificate.numberAndDateDelivery","N° e data de entrega",,
 "ConformityCertificate.orderDate","Data da encomenda",,
 "ConformityCertificate.orderNumber","Número de ordem",,
 "ConformityCertificate.partNumber","Número da peça",,
-"ConformityCertificate.qty","Quantidade",,
+"ConformityCertificate.qtyUnit",,,
 "ConformityCertificate.quantity","Quantidade",,
 "ConformityCertificate.sequence","Seqüência",,
 "ConformityCertificate.signature","Assinatura",,
+"ConformityCertificate.stockMoveLineRowNum",,,
 "Consignments by post","Remessas por correio",,
 "Control on Receipt","Controle de recebimento",,
 "Counter","Contador",,
@@ -168,12 +172,14 @@
 "Dimensions (cm)","Dimensões (cm)",,
 "Display accounting value in location financial data printing",,,
 "Display available tracking numbers","Exibir os números de rastreamento disponíveis",,
+"Display average price in printing",,,
 "Display barcode on Picking printing","Exibir código de barras na impressão Picking",,
 "Display customer code on picking printing",,,
 "Display line details on printing","Exibir detalhes da linha na impressão",,
 "Display partner sequence on printing","Exibir seqüência de parceiros na impressão",,
 "Display sale value in location financial data printing",,,
 "Display tracking number details on Picking printing","Exibir detalhes do número de rastreamento no Picking printing",,
+"Display tracking number details on certificate of conformity printing",,,
 "Do you want to generate backorder for not delivered quantities?",,,
 "Do you want to generate backorder for not received quantities?",,,
 "Draft","Rascunho",,
@@ -532,6 +538,7 @@
 "Sale Qty by tracking","Venda Qtd. por tracking",,
 "Sale order","Ordem de venda",,
 "Sale tracking management","Gestão de rastreamento de vendas",,
+"Sale value",,,
 "Search","Pesquisar",,
 "Select format to Export","Seleccione o formato a exportar",,
 "Seller","Vendedor",,
@@ -589,6 +596,7 @@
 "Stock location details","Detalhes do depósito",,
 "Stock location lines","Linhas de depósito",,
 "Stock location value","Valor do estoque em depósito",,
+"Stock location value on form view",,,
 "Stock location(s)","Localização(ões) de estoque",,
 "Stock managed","Estoque administrado",,
 "Stock management","Gestão de stocks",,
@@ -748,6 +756,7 @@
 "View Direction","Ver Direção",,
 "Virtual","Virtual",,
 "Virtual stock locations informations","Informações sobre locais de estoque virtual",,
+"WAP value",,,
 "Warranty expiration date","Data de vencimento da garantia",,
 "Wording","Redação",,
 "Workshop","Oficina",,
