--- a/axelor-stock/src/main/resources/i18n/messages_ru.csv
+++ b/axelor-stock/src/main/resources/i18n/messages_ru.csv
@@ -16,6 +16,7 @@
 "A cancel reason must be selected","Должна быть выбрана причина отмены.",,
 "A partial stock move has been generated (%s)","Произошло частичное перемещение запасов (%s)",,
 "Account selection to carrier","Выбор аккаунта перевозчику",,
+"Accounting value",,,
 "Add","Добавить",,
 "Address","Адрес",,
 "Alert","Тревога",,
@@ -77,6 +78,7 @@
 "Code","Код",,
 "Collected","Собрано",,
 "Collection date","Дата получения",,
+"Comment",,,
 "Commercial regularization resulting in value increase","Коммерческая регуляризация, приведшая к увеличению стоимости компании",,
 "Commercial regularization resulting in value reduction","коммерческая регуляризация, приводящая к снижению стоимости",,
 "Company","Компания",,
@@ -98,15 +100,17 @@
 "ConformityCertificate.customerName","Имя клиента",,
 "ConformityCertificate.designation","Назначение",,
 "ConformityCertificate.function","Функция",,
+"ConformityCertificate.lotNoRef",,,
 "ConformityCertificate.name","Имя",,
 "ConformityCertificate.numberAndDateDelivery","N° & дата доставки",,
 "ConformityCertificate.orderDate","Дата заказа",,
 "ConformityCertificate.orderNumber","Номер заказа",,
 "ConformityCertificate.partNumber","Номер детали",,
-"ConformityCertificate.qty","Количество",,
+"ConformityCertificate.qtyUnit",,,
 "ConformityCertificate.quantity","Количество",,
 "ConformityCertificate.sequence","Последовательность",,
 "ConformityCertificate.signature","Подпись",,
+"ConformityCertificate.stockMoveLineRowNum",,,
 "Consignments by post","Отправления по почте",,
 "Control on Receipt","Контроль над получением",,
 "Counter","Счетчик",,
@@ -168,12 +172,14 @@
 "Dimensions (cm)","Размеры (см)",,
 "Display accounting value in location financial data printing",,,
 "Display available tracking numbers","Отображение доступных номеров отслеживания",,
+"Display average price in printing",,,
 "Display barcode on Picking printing","Отображение штрихкода на экране Печать на выборке",,
 "Display customer code on picking printing",,,
 "Display line details on printing","Отображение подробностей о линии при печати",,
 "Display partner sequence on printing","Отображение партнерской последовательности при печати",,
 "Display sale value in location financial data printing",,,
 "Display tracking number details on Picking printing","Отображение сведений об отслеживании номера при печати методом подбора заказов",,
+"Display tracking number details on certificate of conformity printing",,,
 "Do you want to generate backorder for not delivered quantities?",,,
 "Do you want to generate backorder for not received quantities?",,,
 "Draft","Проект",,
@@ -532,6 +538,7 @@
 "Sale Qty by tracking","Продажа Qty по отслеживанию",,
 "Sale order","Заказ на продажу",,
 "Sale tracking management","Управление отслеживанием продаж",,
+"Sale value",,,
 "Search","Поиск",,
 "Select format to Export","Выбрать формат для экспорта",,
 "Seller","Продавец",,
@@ -589,6 +596,7 @@
 "Stock location details","Информация о местонахождении запасов",,
 "Stock location lines","Линии размещения запасов",,
 "Stock location value","Стоимость размещения акций",,
+"Stock location value on form view",,,
 "Stock location(s)","Местонахождение(ы) запасов",,
 "Stock managed","Управление запасами",,
 "Stock management","Управление запасами",,
@@ -748,6 +756,7 @@
 "View Direction","Просмотр Направление",,
 "Virtual","Виртуальный",,
 "Virtual stock locations informations","Виртуальная информация о местоположении складов",,
+"WAP value",,,
 "Warranty expiration date","Срок действия гарантии",,
 "Wording","Слово",,
 "Workshop","Семинар",,
