--- a/axelor-supplychain/src/main/resources/i18n/messages_de.csv
+++ b/axelor-supplychain/src/main/resources/i18n/messages_de.csv
@@ -397,6 +397,7 @@
 "Stock location is missing for the sale order %s.","Für den Kundenauftrag %s fehlt der Lagerort.",,
 "Stock move","Lagerbewegung",,
 "Stock move %s has been created for this sale order",,,
+"Stock move comment",,,
 "Stock move line","Lagerbewegungslinie",,
 "Stock move lines","Lagerbewegungslinien",,
 "Stock move type","Lagerbewegungsart",,
@@ -443,6 +444,8 @@
 "The trading name must be the same for all purchase orders.","Der Handelsname muss für alle Bestellungen gleich sein.",,
 "The trading name must be the same for all sale orders.","Der Handelsname muss für alle Verkaufsaufträge gleich sein.",,
 "There are no lines to invoice","Es gibt keine Rechnungszeilen.",,
+"There is no analytic distribution on %s purchase order line",,,
+"There is no analytic distribution on %s sale order line",,,
 "This batch has already been running this month",,,
 "This operation cannot be performed. Available stock for product %s: %s, stock needed: %s. Please deallocate.","Dieser Vorgang kann nicht ausgeführt werden. Verfügbarer Bestand für das Produkt %s: %s: %s, benötigter Bestand: %s. Bitte nicht zuweisen.",,
 "This product is not stock managed.",,,
@@ -451,6 +454,7 @@
 "Timetables","Stundenpläne",,
 "To Date","Bis heute",,
 "Total subscription invoice(s) generated: %s","Gesamtzahl der generierten Abonnementrechnung(en): %s",,
+"Tracking Number",,,
 "Tracking number search","Nachverfolgungsnummern-Suche",,
 "Type","Typ",,
 "Unit","Einheit",,
