--- a/axelor-supplychain/src/main/resources/i18n/messages_en.csv
+++ b/axelor-supplychain/src/main/resources/i18n/messages_en.csv
@@ -397,6 +397,7 @@
 "Stock location is missing for the sale order %s.",,,
 "Stock move",,,
 "Stock move %s has been created for this sale order",,,
+"Stock move comment",,,
 "Stock move line",,,
 "Stock move lines",,,
 "Stock move type",,,
@@ -453,6 +454,7 @@
 "Timetables",,,
 "To Date",,,
 "Total subscription invoice(s) generated: %s","Total facture(s) d'abonnement générée(s): %s",,
+"Tracking Number",,,
 "Tracking number search",,,
 "Type",,,
 "Unit",,,
