--- a/axelor-supplychain/src/main/resources/i18n/messages_es.csv
+++ b/axelor-supplychain/src/main/resources/i18n/messages_es.csv
@@ -397,6 +397,7 @@
 "Stock location is missing for the sale order %s.","Falta la ubicación de stock para el pedido de cliente %s.",,
 "Stock move","Movimiento de stock",,
 "Stock move %s has been created for this sale order",,,
+"Stock move comment",,,
 "Stock move line","Línea de movimiento",,
 "Stock move lines","Líneas de movimiento",,
 "Stock move type","Tipo de movimiento de stock",,
@@ -443,6 +444,8 @@
 "The trading name must be the same for all purchase orders.","El nombre comercial debe ser el mismo para todos los pedidos.",,
 "The trading name must be the same for all sale orders.","El nombre comercial debe ser el mismo para todas las órdenes de venta.",,
 "There are no lines to invoice","No hay líneas que facturar",,
+"There is no analytic distribution on %s purchase order line",,,
+"There is no analytic distribution on %s sale order line",,,
 "This batch has already been running this month",,,
 "This operation cannot be performed. Available stock for product %s: %s, stock needed: %s. Please deallocate.","Esta operación no se puede realizar. Stock disponible para el producto %s: %s, stock necesario: %s. Por favor, deslocaliza.",,
 "This product is not stock managed.",,,
@@ -451,6 +454,7 @@
 "Timetables","Horarios de los cursos",,
 "To Date","Hasta la fecha",,
 "Total subscription invoice(s) generated: %s","Factura(s) de suscripción total(es) generada(s): %s",,
+"Tracking Number",,,
 "Tracking number search","Búsqueda de números de seguimiento",,
 "Type","Tipo",,
 "Unit","Unidad",,
