--- a/axelor-supplychain/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-supplychain/src/main/resources/i18n/messages_fr.csv
@@ -397,6 +397,7 @@
 "Stock location is missing for the sale order %s.","L'emplacement de stock est manquant pour la commande %s.",,
 "Stock move","Mouvement de stock",,
 "Stock move %s has been created for this sale order","Le BL %s a été généré pour la commande",,
+"Stock move comment","Commentaire bon de livraison",,
 "Stock move line",,,
 "Stock move lines",,,
 "Stock move type","Type de mouvement de stock",,
@@ -453,6 +454,7 @@
 "Timetables","Echéanciers",,
 "To Date","Date de fin",,
 "Total subscription invoice(s) generated: %s","Total facture(s) d'abonnement générée(s): %s",,
+"Tracking Number",,,
 "Tracking number search","Recherche des numéros de suivi",,
 "Type",,,
 "Unit","Unité",,
