--- a/axelor-supplychain/src/main/resources/i18n/messages_it.csv
+++ b/axelor-supplychain/src/main/resources/i18n/messages_it.csv
@@ -397,6 +397,7 @@
 "Stock location is missing for the sale order %s.","Per l'ordine di vendita manca l'ubicazione dello stock %s.",,
 "Stock move","Spostamento delle scorte",,
 "Stock move %s has been created for this sale order",,,
+"Stock move comment",,,
 "Stock move line","Linea stock move line",,
 "Stock move lines","Linee di spostamento delle scorte",,
 "Stock move type","Tipo di movimento delle scorte",,
@@ -443,6 +444,8 @@
 "The trading name must be the same for all purchase orders.","Il nome commerciale deve essere lo stesso per tutti gli ordini di acquisto.",,
 "The trading name must be the same for all sale orders.","Il nome commerciale deve essere lo stesso per tutti gli ordini di vendita.",,
 "There are no lines to invoice","Non ci sono righe da fatturare",,
+"There is no analytic distribution on %s purchase order line",,,
+"There is no analytic distribution on %s sale order line",,,
 "This batch has already been running this month",,,
 "This operation cannot be performed. Available stock for product %s: %s, stock needed: %s. Please deallocate.","Questa operazione non può essere eseguita. Stock disponibile per prodotto %s: %s, stock necessario: %s. Per favore, disallocate.",,
 "This product is not stock managed.",,,
@@ -451,6 +454,7 @@
 "Timetables","Orari",,
 "To Date","Fino ad oggi",,
 "Total subscription invoice(s) generated: %s","Fattura(i) totale(i) di abbonamento generata(e): %s",,
+"Tracking Number",,,
 "Tracking number search","Ricerca del numero di tracciamento",,
 "Type","Tipo",,
 "Unit","Unità",,
