--- a/axelor-supplychain/src/main/resources/i18n/messages_nl.csv
+++ b/axelor-supplychain/src/main/resources/i18n/messages_nl.csv
@@ -397,6 +397,7 @@
 "Stock location is missing for the sale order %s.","Voorraadlocatie ontbreekt voor de verkooporder %s.",,
 "Stock move","Voorraadverhuizing",,
 "Stock move %s has been created for this sale order",,,
+"Stock move comment",,,
 "Stock move line","Voorraadverplaatsingslijn",,
 "Stock move lines","Voorraadverplaatsingslijnen",,
 "Stock move type","Voorraadverplaatsing type",,
@@ -443,6 +444,8 @@
 "The trading name must be the same for all purchase orders.","De handelsnaam moet dezelfde zijn voor alle inkooporders.",,
 "The trading name must be the same for all sale orders.","De handelsnaam moet dezelfde zijn voor alle verkooporders.",,
 "There are no lines to invoice","Er zijn geen lijnen om te factureren",,
+"There is no analytic distribution on %s purchase order line",,,
+"There is no analytic distribution on %s sale order line",,,
 "This batch has already been running this month",,,
 "This operation cannot be performed. Available stock for product %s: %s, stock needed: %s. Please deallocate.","Deze handeling kan niet worden uitgevoerd. Beschikbare voorraad voor product %s: %s, benodigde voorraad: %s. Please deallocate.",,
 "This product is not stock managed.",,,
@@ -451,6 +454,7 @@
 "Timetables","Dienstregelingen",,
 "To Date","Tot op heden",,
 "Total subscription invoice(s) generated: %s","Totaal aantal gegenereerde abonnementsfacturen: %s",,
+"Tracking Number",,,
 "Tracking number search","Tracking nummer zoeken",,
 "Type","Type",,
 "Unit","Eenheid",,
