--- a/axelor-supplychain/src/main/resources/i18n/messages_pl.csv
+++ b/axelor-supplychain/src/main/resources/i18n/messages_pl.csv
@@ -397,6 +397,7 @@
 "Stock location is missing for the sale order %s.","Brak lokalizacji zapasów dla zamówienia sprzedaży %s.",,
 "Stock move","Przenoszenie zapasów",,
 "Stock move %s has been created for this sale order",,,
+"Stock move comment",,,
 "Stock move line","Linia przesuwu zapasów",,
 "Stock move lines","Linie przesuwu zapasów",,
 "Stock move type","Typ przemieszczeń magazynowych",,
@@ -443,6 +444,8 @@
 "The trading name must be the same for all purchase orders.","Nazwa handlowa musi być taka sama dla wszystkich zleceń kupna.",,
 "The trading name must be the same for all sale orders.","Nazwa handlowa musi być taka sama dla wszystkich zleceń sprzedaży.",,
 "There are no lines to invoice","Nie ma wierszy do wystawienia faktury",,
+"There is no analytic distribution on %s purchase order line",,,
+"There is no analytic distribution on %s sale order line",,,
 "This batch has already been running this month",,,
 "This operation cannot be performed. Available stock for product %s: %s, stock needed: %s. Please deallocate.","Ta operacja nie może być wykonana. Dostępne zapasy produktów %s: %s, zapasy potrzebne: %s. Proszę o dezalokatę.",,
 "This product is not stock managed.",,,
@@ -451,6 +454,7 @@
 "Timetables","Rozkłady jazdy",,
 "To Date","Do daty",,
 "Total subscription invoice(s) generated: %s","Całkowita wartość wygenerowanej(-ych) faktury(-ów) abonamentowej(-ych): %s",,
+"Tracking Number",,,
 "Tracking number search","Wyszukiwanie numerów monitorowania",,
 "Type","Typ",,
 "Unit","Jednostka",,
