--- a/axelor-supplychain/src/main/resources/i18n/messages_pt.csv
+++ b/axelor-supplychain/src/main/resources/i18n/messages_pt.csv
@@ -397,6 +397,7 @@
 "Stock location is missing for the sale order %s.","Falta a localização do estoque para a ordem de venda %s.",,
 "Stock move","Movimento de estoque",,
 "Stock move %s has been created for this sale order",,,
+"Stock move comment",,,
 "Stock move line","Linha de movimentação de estoque",,
 "Stock move lines","Linhas de movimentação de estoque",,
 "Stock move type","Tipo de movimento de estoque",,
@@ -443,6 +444,8 @@
 "The trading name must be the same for all purchase orders.","O nome comercial deve ser o mesmo para todos os pedidos.",,
 "The trading name must be the same for all sale orders.","O nome comercial deve ser o mesmo para todas as ordens de venda.",,
 "There are no lines to invoice","Não há linhas para facturar",,
+"There is no analytic distribution on %s purchase order line",,,
+"There is no analytic distribution on %s sale order line",,,
 "This batch has already been running this month",,,
 "This operation cannot be performed. Available stock for product %s: %s, stock needed: %s. Please deallocate.","Esta operação não pode ser realizada. Estoque disponível para produto %s: %s, estoque necessário: %s. Por favor, desalojar.",,
 "This product is not stock managed.",,,
@@ -451,6 +454,7 @@
 "Timetables","Horários",,
 "To Date","Até à data",,
 "Total subscription invoice(s) generated: %s","Faturamento(s) total(is) de assinatura gerado(s): %s",,
+"Tracking Number",,,
 "Tracking number search","Busca por número de rastreamento",,
 "Type","Tipo de",,
 "Unit","Unidade",,
