--- a/axelor-supplychain/src/main/resources/i18n/messages_ru.csv
+++ b/axelor-supplychain/src/main/resources/i18n/messages_ru.csv
@@ -397,6 +397,7 @@
 "Stock location is missing for the sale order %s.","Для заказа на продажу отсутствуют данные о местонахождении запасов, %s.",,
 "Stock move","Перемещение запасов",,
 "Stock move %s has been created for this sale order",,,
+"Stock move comment",,,
 "Stock move line","Линия перемещения запасов",,
 "Stock move lines","Линии перемещения запасов",,
 "Stock move type","Тип перемещения запасов",,
@@ -443,6 +444,8 @@
 "The trading name must be the same for all purchase orders.","Торговое название должно быть одинаковым для всех заявок на покупку.",,
 "The trading name must be the same for all sale orders.","Торговое название должно быть одинаковым для всех ордеров на продажу.",,
 "There are no lines to invoice","Здесь нет строк для выставления счетов.",,
+"There is no analytic distribution on %s purchase order line",,,
+"There is no analytic distribution on %s sale order line",,,
 "This batch has already been running this month",,,
 "This operation cannot be performed. Available stock for product %s: %s, stock needed: %s. Please deallocate.","Эта операция не может быть выполнена. Доступные запасы для продукта %s: %s, необходимые запасы: %s. Пожалуйста, освободите место.",,
 "This product is not stock managed.",,,
@@ -451,6 +454,7 @@
 "Timetables","Расписания",,
 "To Date","На свидание",,
 "Total subscription invoice(s) generated: %s","Суммарный генерируемый(ие) счет(ы) за подписку: %s",,
+"Tracking Number",,,
 "Tracking number search","Поиск номера отслеживания",,
 "Type","Тип",,
 "Unit","Подразделение",,
